[package]
name = "wasm-flow-free"
version = "0.1.0"
authors = ["Sebastian <storo3@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
bitvec = "1.0"
png = "0.17.13"
rand_pcg = "0.3.1"
console_error_panic_hook = "0.1.7"
[dev-dependencies]
wasm-bindgen-test = "0.3.34"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"


[profile.dev]
opt-level = 1
split-debuginfo = "packed"
